feat: add delete blueprint command
